tag recycler view add

--- a/laterlist/src/main/res/values/strings.xml
+++ b/laterlist/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="tab_layout_all_list">全部</string>
     <string name="tab_layout_collect_list">收藏</string>
     <string name="tab_layout_tag_list">标签</string>
+
+    <string name="category_header_title">收藏夹</string>
 </resources>
