--- a/laterlist/src/main/res/values/strings.xml
+++ b/laterlist/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="tab_layout_tag_list">标签</string>
 
     <string name="category_header_title">收藏夹</string>
+
+    <string name="later_all_tool_bar_title">列表</string>
 </resources>
