--- a/profile/src/main/res/values/strings.xml
+++ b/profile/src/main/res/values/strings.xml
@@ -1,4 +1,15 @@
 <resources>
     <string name="app_name">Profile</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="hint_email">email</string>
+    <string name="hint_password">password</string>
+    <string name="forgot_password">Forgot Password?</string>
+
+    <string name="Login">Login</string>
+    
+    <string name="other_login_way">other ways</string>
+
+    <string name="username">username</string>
+    <string name="email">email</string>
 </resources>
