--- a/profile/src/main/res/values/strings.xml
+++ b/profile/src/main/res/values/strings.xml
@@ -5,9 +5,11 @@
     <string name="hint_email">email</string>
     <string name="hint_password">password</string>
     <string name="forgot_password">Forgot Password?</string>
+    <string name="signup">Signup</string>
 
     <string name="Login">Login</string>
-    
+    <string name="Signup">Signup</string>
+
     <string name="other_login_way">other ways</string>
 
     <string name="username">username</string>
