--- a/profile/src/main/res/values/strings.xml
+++ b/profile/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
 
     <string name="other_login_way">other ways</string>
 
-    <string name="username">username</string>
-    <string name="email">email</string>
+    <string name="username">未登录</string>
+    <string name="email">点击头像登录</string>
+
+    <string name="toolbar_profile">Profile</string>
 </resources>
