--- a/laterlist/src/main/res/values/strings.xml
+++ b/laterlist/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="tab_layout_collect_list">收藏</string>
     <string name="tab_layout_tag_list">标签</string>
 
-    <string name="category_header_title">收藏夹</string>
+    <string name="favorite_category_header_title">收藏夹</string>
+    <string name="recycle_category_header_title">回收站</string>
 
     <string name="later_all_tool_bar_title">列表</string>
 
