--- a/calendar/src/main/res/values/strings.xml
+++ b/calendar/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Calendar</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="todo_tool_bar_title">待办</string>
 </resources>
