--- a/notification/src/main/res/values/strings.xml
+++ b/notification/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Notification</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="msg_tool_bar_title">消息</string>
 </resources>
