--- a/notification/src/main/res/values/strings.xml
+++ b/notification/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="msg_tool_bar_title">消息</string>
+
+    <string name="chat_message_avatar">avatar</string>
 </resources>
