add custom webView into project

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="delete_icon_description">删除</string>
     <string name="edit_icon_description">修改</string>
 
+    <string name="toolbar_webview">WebView</string>
+
 </resources>
