finish the main function of image picker, and improve the performance when loading the image list

--- a/imagepicker/src/main/res/values/strings.xml
+++ b/imagepicker/src/main/res/values/strings.xml
@@ -1,1 +1,5 @@
-<resources></resources>
+<resources>
+    <string name="image_picker_title">Select Images</string>
+    <string name="done">Done</string>
+    <string name="selected_count">0</string>
+</resources>
